[package]
name = "cfdi_use_mx"
version = "1.1.0"
edition = "2021"
authors = ["johnteper <git@johnteper.me>"]
description = "Mexican CFDI use"
homepage = "https://github.com/jonhteper/cfdi_use_mx"
license = "MIT"
repository = "https://github.com/jonhteper/cfdi_use_mx"

[dependencies]
parse-display = "0.10.0"
parse-display-derive = "0.10.0"
serde = { version = "1", optional = true }

[dev-dependencies]
serde_json = { version = "1" }
serde = { version = "1", features = ["derive"] }

[features]
serde = ["dep:serde"]
default = ["serde"]
